# SLAT-Studio

./: .gitignore  .gitmodules  README.md  app.py  index.html  pyproject.toml
docs/: ENVIRONMENT.md  STATUS.md
examples/: phase1_generate.py  phase1_restyle.py  phase2_bridge.py  phase3_edit.py  phase4_gen_target.py  phase4_morph.py  phase5_inpaint.py
project-page/: README.md  index.html
report/: report.typ
report/videos/: expand_comparison.py  make_rows.py
scripts/: build_env.sh  build_ext_noiso.sh  full_smoke.py  make_page_figures.py  remake_edit.py  run_app.sh  run_full_smoke.sh  run_phase1.sh  run_phase2.sh  run_phase3.sh  run_phase4.sh  run_phase5.sh  smoke_test.py  test_slat_io.py
slat_studio/: __init__.py
slat_studio/bridge/: __init__.py  encode.py  render.py  voxelize.py
slat_studio/editing/: __init__.py  region_edit.py
slat_studio/inpainting/: __init__.py  complete.py
slat_studio/io/: __init__.py  slat_io.py
slat_studio/morph/: __init__.py  interpolate.py
slat_studio/pipelines/: __init__.py  generate.py
slat_studio/samplers/: __init__.py  repaint.py
slat_studio/style/: __init__.py  restyle.py
